Tests/context/invalid/class41.java
class A {
	int x;
    x==50;
}

